# mygo_serifu_bot

./: .gitignore  Dockerfile  README.md  change.py  file-change.py  main.py  pyproject.toml  requirements.txt  setup.sh  sub_process.py  test.py
assets/: ocr_data_3.json
logs/: ranks.json
src/: constants.py  main.py  media.py  ocr_data_3.json  search.py
src/mygo_serifu_bot/: api.py  constants.py  file-change.py  main.py  media.py  search.py
